<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_form_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/departure_town_field_label"/>

    <EditText
        android:id="@+id/departure_town_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/departure_town_hint"
        android:inputType="textCapWords"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/arrival_town_field_label"/>

    <EditText
        android:id="@+id/arrival_town_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/arrival_town_hint"
        android:inputType="textCapWords"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"/>

</LinearLayout>
